--- a/src/App.css
+++ b/src/App.css
@@ -37,7 +37,7 @@
             padding-top: 0.32rem;
             padding-bottom: 0.32rem;
             margin-right: 1rem;
-            font-size: 2.5rem;
+            font-size: 3.5vw;
             line-height: inherit;
             white-space: nowrap;
             color: white;
