--- a/src/App.css
+++ b/src/App.css
@@ -65,7 +65,7 @@
             width: 90px;
             height: 90px;
             line-height: 90px;
-            margin: 0 10px;
+            margin: 2px 10px;
             text-align: center;
             position: relative;
             overflow: hidden;
