--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,11 @@
             src: local('MyFont'), url(./fonts/WinterCat-vmymD.woff) format('woff');
         }
         
+        @font-face {
+            font-family: 'MyFontCat';
+            src: local('MyFontCat'), url(./fonts/AustieBostKittenKlub.woff) format('woff');
+        }
+        
         .App {
             text-align: center;
             background-image: url("images/back.png");
@@ -44,11 +49,18 @@
             font-family: 'MyFont', sans-serif;
         }
         
+        .searching-dog {
+            width: 50%;
+            margin-top: -190px;
+            margin-bottom: 360px;
+        }
+        
         .coming-soon-head {
             color: #fff;
-            margin-top: 200px;
-            padding-bottom: 400px;
+            margin-top: 120px;
             font-size: 7vw;
+            font-family: 'MyFontCat', sans-serif;
+            margin-bottom: 25px;
         }
         
         .social-btns {
@@ -121,7 +133,6 @@
             color: #fff;
             font-size: 7vw;
             text-align: left;
-            -webkit-text-stroke: 2px black;
         }
         
         .puppy-head h3 {
@@ -131,6 +142,8 @@
         
         .App .navbar-dark .navbar-nav .nav-link {
             color: #fff;
+            font-size: 26px;
+            font-family: 'MyFont', sans-serif;
         }
         
         .content {
@@ -180,7 +193,6 @@
             color: #fff;
             font-size: 50px;
             margin-bottom: 50px;
-            ;
         }
         
         .grid-sequence {
